--- a/style.css
+++ b/style.css
@@ -1,1 +1,126 @@
-/*# sourceMappingURL=style.css.map */
+.container {
+  display: flex;
+  flex-direction: row;
+  width: 60%;
+  font-family: "Poppins";
+  border: 1px black solid;
+  margin-left: auto;
+  margin-right: auto;
+}
+.container .post-container {
+  border: 1px black solid;
+  width: 55%;
+}
+.container .post-container .story-container {
+  display: flex;
+  flex-direction: row;
+  overflow-x: auto;
+  width: 100%;
+  border: 1px #000000 solid;
+  border-radius: 2%;
+}
+.container .post-container .story-container__list {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  width: 70px;
+}
+.container .post-container .story-container__list__image {
+  align-items: center;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+}
+.container .post-container .story-container__list__name-text {
+  font-size: small;
+  text-align: center;
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.container .post-container .post-frame {
+  border: 1px black solid;
+}
+.container .info-container {
+  display: flex;
+  flex-direction: column;
+  width: 45%;
+  padding-left: 20px;
+}
+.container .info-container .main-card {
+  display: flex;
+  flex-direction: row;
+  margin: 10px;
+}
+.container .info-container .main-card__image {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+}
+.container .info-container .main-card__text {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  font-size: 14px;
+  justify-content: center;
+  padding-left: 15px;
+}
+.container .info-container .main-card__button {
+  border: none;
+  color: rgb(0, 115, 222);
+  background-color: #ffffff;
+  font-size: 14px;
+  cursor: pointer;
+}
+.container .info-container .suggestion {
+  display: flex;
+  flex-direction: column;
+}
+.container .info-container .suggestion__title {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.container .info-container .suggestion__title__button {
+  border: none;
+  color: #000000;
+  background-color: #ffffff;
+  font-size: 14px;
+  cursor: pointer;
+}
+.container .info-container .suggestion__list-container {
+  display: flex;
+  flex-direction: column;
+}
+.container .info-container .suggestion__list-container__list {
+  display: flex;
+  flex-direction: row;
+  padding: 5px;
+}
+.container .info-container .suggestion__list-container__list .suggest-list-image {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+.container .info-container .suggestion__list-container__list .suggest-list-text {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  font-size: 14px;
+  justify-content: center;
+  padding-left: 15px;
+}
+.container .info-container .suggestion__list-container__list .suggest-list-text__sub {
+  font-size: 12px;
+  color: #767676;
+}
+.container .info-container .suggestion__list-container__list .suggest-list-button {
+  border: none;
+  color: rgb(0, 115, 222);
+  background-color: #ffffff;
+  font-size: 14px;
+  cursor: pointer;
+}/*# sourceMappingURL=style.css.map */
