--- a/style.scss
+++ b/style.scss
@@ -124,7 +124,7 @@
 
         .post-list {
             @include flex-column();
-            border: 1px black solid;
+            border: 1px #000000 solid;
             border-radius: 7px;
             margin-top: 18px;
 
@@ -193,7 +193,7 @@
             &__comment {
                 @include flex-row();
                 justify-content: space-between;
-                border-top: 1px black solid;
+                border-top: 1px #000000 solid;
 
                 &__icon {
                     font-size: 25px;
